added latest file

--- a/index.html
+++ b/index.html
@@ -25,12 +25,16 @@
 
     <!--category button section -->
 
-    <nav id="category-contaiber" class="flex py-5 gap-5  justify-center">
-        <button class="btn btn-sm">All</button>
-        <button class="btn btn-sm">All</button>
-        <button class="btn btn-sm">All</button>
-        <button class="btn btn-sm">All</button>
+    <nav id="category-container" class="flex py-5 gap-5  justify-center">
+        <button class="btn btn-sm  bg-[#FF1F3D] text-white">All</button>
+       
     </nav>
+
+
+    <!-- video container -->
+     <section id="video-container">
+
+     </section>
     
     <script src="./script/index.js"></script>
 </body>
